--- a/package.json
+++ b/package.json
@@ -8,5 +8,12 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "bookshelf": "^1.2.0",
+    "express": "^4.17.1",
+    "knex": "^0.21.18",
+    "nodemon": "^2.0.7",
+    "pg": "^8.5.1"
+  }
 }
