--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "server",
+  "name": "blog-post",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
+    "start": "nodemon ./src/index.js", 
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -11,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "bookshelf": "^1.2.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "knex": "^0.21.18",
     "nodemon": "^2.0.7",
